feature: slider created

--- a/index.html
+++ b/index.html
@@ -49,45 +49,104 @@
         </div>
       </div>
       <div class="card">
-        <div class="number-card">1</div>
+        <div class="number-card">2</div>
         <div class="card-part-2">
-          <h1 class="title-card">DESINTOXICAÇÃO</h1>
+          <h1 class="title-card">TRANSFORMAÇÃO</h1>
           <p>
-            Limpar, desintoxicar e desinchar o seu corpo possibilitando perder
-            até 3 kg logo nos primeiros 3 dias.
+            Reestruturar a sua alimentação aos princípios Low Carb, para reduzir
+            a ingestão de carboidratos e consumir mais proteínas e gorduras
+            boas.
           </p>
         </div>
       </div>
       <div class="card">
         <div class="number-card">1</div>
         <div class="card-part-2">
-          <h1 class="title-card">DESINTOXICAÇÃO</h1>
+          <h1 class="title-card">ATIVAÇÃO DO SEU CORPO</h1>
           <p>
-            Limpar, desintoxicar e desinchar o seu corpo possibilitando perder
-            até 3 kg logo nos primeiros 3 dias.
+            Além de potencializar o seu emagrecimento, você percebe melhoras
+            significativas na sua energia e disposição.
           </p>
         </div>
       </div>
       <div class="card">
         <div class="number-card">1</div>
         <div class="card-part-2">
-          <h1 class="title-card">DESINTOXICAÇÃO</h1>
+          <h1 class="title-card">ACELERAÇÃO</h1>
           <p>
-            Limpar, desintoxicar e desinchar o seu corpo possibilitando perder
-            até 3 kg logo nos primeiros 3 dias.
+            Tire o seu organismo da estagnação e gere novos estímulos para
+            potencializar a mudança corporal e redução das suas medidas.
           </p>
         </div>
       </div>
       <div class="card">
         <div class="number-card">1</div>
         <div class="card-part-2">
-          <h1 class="title-card">DESINTOXICAÇÃO</h1>
+          <h1 class="title-card">FINALIZAÇÃO</h1>
           <p>
-            Limpar, desintoxicar e desinchar o seu corpo possibilitando perder
-            até 3 kg logo nos primeiros 3 dias.
+            Parabéns! Você concluiu seu desafio. Aqui você provavelmente já vai
+            ter eliminado o peso que desejava, estará com a sua barriga sequinha
+            e com a autoconfiança nas alturas!
           </p>
         </div>
       </div>
+      <p style="margin-top: 3rem; font-weight: 500">
+        ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
+        EM ATÉ 6X.
+      </p>
+      <a href="" class="button">
+        <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
+        <p class="bottom-button">
+          satisfação garantida ou seu dinheiro de voltar
+        </p>
+      </a>
+      <img style="margin-top: -3rem" src="/images/seguro.png" alt="" />
     </main>
+    <section class="main-2">
+      <span
+        >Já Imaginou Emagrecer Com Um Método Capaz De Transformar O Seu Corpo De
+        Forma Saudável Em Apenas 19 Dias?</span
+      >
+    </section>
+    <section class="provas">
+      <h3 class="title-provas">
+        Centenas De Pessoas Sendo Transformadas Com O Desafio 19 Dias E Você
+        Pode Ser A Próxima! Veja Alguns Resultados (100% Reais):
+      </h3>
+      <div class="img">
+        <img src="/images/provas/0.jpg" alt="" />
+      </div>
+      <div class="grid">
+        <img src="/images/provas/1.jpg" alt="" />
+        <img src="/images/provas/2.jpg" alt="" />
+        <img src="/images/provas/3.jpg" alt="" />
+      </div>
+      <div class="grid">
+        <img src="/images/provas/4.jpg" alt="" />
+        <img src="/images/provas/5.jpg" alt="" />
+        <img src="/images/provas/6.jpg" alt="" />
+      </div>
+      <h1 class="title-provas">
+        O Corpo Dos Seus Sonhos Sem Pílulas Ou Medicamentos! Esse É O Poder Do
+        Desafio 19 Dias!
+      </h1>
+      <h2 class="subtitle-provas">
+        Agora imagine você tendo os mesmos resultados, sem dietas malucas e sem
+        precisar gastar horas e horas em academias, e o melhor de tudo que você
+        vai economizar muito porque nossos alimentos são simples, baratos e a
+        maioria você já tem em casa!
+      </h2>
+      <div class="slider">
+          <img src="/images/slider/0.jpg" alt="">
+          <img src="/images/slider/1.jpg" alt="">
+          <img src="/images/slider/2.jpg" alt="">
+          <img src="/images/slider/3.jpg" alt="">
+          <img src="/images/slider/4.jpg" alt="">
+          <img src="/images/slider/5.jpg" alt="">
+          <img src="/images/slider/6.jpg" alt="">
+          <img src="/images/slider/7.jpg" alt="">
+          <img src="/images/slider/8.jpg" alt="">
+      </div>
+    </section>
   </body>
 </html>
