feature: sections celular e depoimentos add

--- a/index.html
+++ b/index.html
@@ -137,15 +137,114 @@
         maioria você já tem em casa!
       </h2>
       <div class="slider">
-          <img src="/images/slider/0.jpg" alt="">
-          <img src="/images/slider/1.jpg" alt="">
-          <img src="/images/slider/2.jpg" alt="">
-          <img src="/images/slider/3.jpg" alt="">
-          <img src="/images/slider/4.jpg" alt="">
-          <img src="/images/slider/5.jpg" alt="">
-          <img src="/images/slider/6.jpg" alt="">
-          <img src="/images/slider/7.jpg" alt="">
-          <img src="/images/slider/8.jpg" alt="">
+        <img src="/images/slider/0.jpg" alt="" />
+        <img src="/images/slider/1.jpg" alt="" />
+        <img src="/images/slider/2.jpg" alt="" />
+        <img src="/images/slider/3.jpg" alt="" />
+        <img src="/images/slider/4.jpg" alt="" />
+        <img src="/images/slider/5.jpg" alt="" />
+        <img src="/images/slider/6.jpg" alt="" />
+        <img src="/images/slider/7.jpg" alt="" />
+        <img src="/images/slider/8.jpg" alt="" />
+      </div>
+      <p class="acesso" style="margin-top: 0.5rem">
+        ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
+        EM ATÉ 6X.
+      </p>
+      <div class="button-container">
+        <a href="" class="button">
+          <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
+          <p class="bottom-button">
+            satisfação garantida ou seu dinheiro de voltar
+          </p>
+        </a>
+      </div>
+      <img style="margin-top: -3rem" src="/images/seguro.png" alt="" />
+    </section>
+    <section class="video-provas">
+      <h1 class="title-video-provas">QUEM COMPROU, NÃO SE ARREPENDEU!</h1>
+      <div class="videos-content">
+        <iframe
+          width="352.8"
+          height="198.45"
+          src="https://www.youtube.com/embed/io17VfViLiI"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="352.8"
+          height="198.45"
+          src="https://www.youtube.com/embed/QtliTggLrss"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="352.8"
+          height="198.45"
+          src="https://www.youtube.com/embed/5WnMj3xxodA"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+    <section class="celular">
+      <div class="img-celular">
+        <img src="/images/outras/celular.webp" alt="" />
+      </div>
+      <div class="celular-description">
+        <h1>
+          VOCÊ VAI TER ACESSO AO MÉTODO DE EMAGRECIMENTO NA PALMA DA SUA MÃO
+        </h1>
+        <h2>
+          Tudo de forma fácil e organizada para você simplesmente baixar o
+          e-book e os conteúdos complementares e começar a emagrecer.
+        </h2>
+      </div>
+    </section>
+    <section class="bonus">
+      <h1 class="bonus-title">
+        ATENÇÃO! COMPRE HOJE E GANHE ESSES BÔNUS EXCLUSIVOS:
+      </h1>
+      <div class="bonus-container">
+        <div class="bonus-part-1">
+          <div class="bonus-item">
+            <img src="/images/bonus/0.webp" alt="" />
+            <div class="bonus-item-content">
+              <h1 class="bonus-item-title">+ De 300 Receitas Low Carb</h2>
+              <h2 class="bonus-item-description">
+                Opções de doces e salgados deliciosos para você diversificar o seu
+                cardápio e ainda assim perder peso rápido.
+              </h2>
+            </div>
+          </div>
+          <div class="bonus-item">
+            <img src="/images/bonus/1.webp" alt="" />
+            <div class="bonus-item-content">
+              <h1 class="bonus-item-title">+ De 100 Receitas Detox</h2>
+              <h2 class="bonus-item-description">
+                Receitas práticas e rápidas que vão ajudar a desintoxicar o seu organismo e intensificar a queima de gordura abdominal.
+              </h2>
+            </div>
+          </div>
+          <div class="bonus-item">
+            <img src="/images/bonus/2.webp" alt="" />
+            <div class="bonus-item-content">
+              <h1 class="bonus-item-title">Suporte E Motivação No Grupo Vip</h2>
+              <h2 class="bonus-item-description">
+                Toda a ajuda e motivação que você precisa para se manter focada no seu objetivo.
+              </h2>
+            </div>
+          </div>
+        </div>
+        <div class="bonus-part-2">
+          <img src="/images/bonus/mulher.webp" alt="">
+        </div>
       </div>
     </section>
   </body>
