feature: porque and preco add

--- a/index.html
+++ b/index.html
@@ -247,5 +247,78 @@
         </div>
       </div>
     </section>
+    <section class="maryana">
+      <h1 class="maryana-title">
+        Veja O Resultado Incrível Da Maryana:
+      </h1>
+      <div class="vsl">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dozL9SdltqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <p>
+        ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
+        EM ATÉ 6X.
+      </p>
+      <a href="" class="button">
+        <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
+        <p class="bottom-button">
+          satisfação garantida ou seu dinheiro de voltar
+        </p>
+      </a>
+    </section>
+    <section class="porque">
+      <h1 class="porque-title">Por Que O Desafio 19 Dias É Um Método Super Funcional?
+      </h1>
+      <div class="porque-items">
+        <h2>✅ Eficiência energética</h2>
+        <h3>Nosso método não é sobre deixar de comer, mas comer certo, sem passar fome, com escolhas inteligentes.</h3>
+      </div>
+      <div class="porque-items">
+        <h2>✅ Alimentação Low Carb</h2>
+        <h3>Reeduque a sua alimentação fazendo as melhores substituições para conquistar um emagrecimento mais acelerado e saudável.</h3>
+      </div>
+      <div class="porque-items">
+        <h2>✅ Motivação Diária</h2>
+        <h3>Incentivo e suporte no nosso Grupo Vip para que você se mantenha motivada no seu objetivo e consiga finalmente mudar de vida.</h3>
+      </div>
+      <img src="/images/outras/antes.webp" alt="">
+      <div class="list">
+        <img src="/images/outras/list.jpg" alt="">
+      </div>
+    </section>
+    <section class="preco">
+      <h1 class="preco-title">Quanto Vale TUDO ISSO?
+      </h1>
+      <div class="preco-container">
+        
+        <div class="preco-items-container">
+          <p class="check">✅</p>
+          <div class="preco-items">
+            <p class="title-preco-items">E-book Desafio 19 Dias</p>
+            <p class="money">R$ 127,00</p>
+          </div>
+        </div>
+        <div class="preco-items-container">
+          <p class="check">✅</p>
+          <div class="preco-items">
+            <p class="title-preco-items">Bônus 1: E-book 300 Receitas Low Carb</p>
+            <p class="money">R$ 67,00</p>
+          </div>
+        </div>
+        <div class="preco-items-container">
+          <p class="check">✅</p>
+          <div class="preco-items">
+            <p class="title-preco-items">Bônus 2: E-book 100 Receitas Detox </p>
+            <p class="money">R$ 47,00</p>
+          </div>
+        </div>
+        <div class="preco-items-container">
+          <p class="check">✅</p>
+          <div class="preco-items">
+            <p class="title-preco-items">Bônus 4: Grupo VIP Motivacional</p>
+            <p class="money">R$ 37,00</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
