feature: bump add

--- a/index.html
+++ b/index.html
@@ -320,5 +320,22 @@
         </div>
       </div>
     </section>
+    <section class="bump">
+      <section class="bump-container">
+        <h1 class="title-bump">LIBERAMOS UMA PROMOÇÃO IMPERDÍVEL SOMENTE HOJE. NÃO PERCA ESSA OPORTUNIDADE E ADQUIRA AGORA MESMO!</h1>
+        <h2 class="subtitle-bump">ÚLTIMAS VAGAS COM DESCONTO
+        </h2>
+       <h3 class="oferta">Oferta Imperdível! Apenas
+      </h3>
+      <p class="price">R$ 25,00</p>
+      <p class="slice-price">Até 2X de R$ 12,97</p>
+      <a href="" class="bump-button">SIM, EU QUERO COMEÇAR AGORA!</a>
+      <p class="bump-pagamento">PAGAMENTO ÚNICO, SEM MENSALIDADES, 
+        ACESSO VITALÍCIO AO CONTEÚDO.</p>
+        <div class="bump-image">
+          <img src="/images/outras/bandeiras.webp" alt="">
+        </div>
+      </section>
+    </section>
   </body>
 </html>
