feature: slider 2 add

--- a/index.html
+++ b/index.html
@@ -337,5 +337,22 @@
         </div>
       </section>
     </section>
+    <section class="headline-red">
+      Oferta Disponível Somente Por Mais Alguns Minutos! Não Perca Mais Tempo E Comece HOJE A Sua Mudança
+    </section>
+    <section class="garantia">
+      <img src="/images/outras/garantia.webp" alt="">
+      <h1>7 Dias De Garantia Incondicional</h1>
+      <p>Simples! Compre agora e tenha direito de arrependimento de até 7 dias.</p>
+    <p>Se você não gostar ou não se adaptar ao nosso método, basta enviar um e-mail para desafio19dias.contato@gmail.com dentro do período de garantia e cancelamos sua compra, reembolsando 100% do valor pago sem burocracias. Esse é o nosso compromisso com você!</p>
+    <div class="slider">
+      <img src="/images/slider2/1.webp" alt="">
+      <img src="/images/slider2/2.webp" alt="">
+      <img src="/images/slider2/3.webp" alt="">
+      <img src="/images/slider2/4.webp" alt="">
+      <img src="/images/slider2/5.webp" alt="">
+      <img src="/images/slider2/6.webp" alt="">
+    </div>
+  </section>
   </body>
 </html>
