--- a/index.html
+++ b/index.html
@@ -354,5 +354,86 @@
       <img src="/images/slider2/6.webp" alt="">
     </div>
   </section>
+  <section class="interacao-content">
+    <section class="interacao">
+      <div class="part1">
+        <h1 class="interacao-title">Interação E Motivação No Grupo VIP</h1>
+        <div class="interacao-container">
+          <p class="star">⭐</p>
+          <div class="interacao-items">
+            <p class="title-interacao">Sua ajuda diária</p>
+              <span class="description-interacao">Você não vai estar sozinha. Tire todas as dúvidas sobre o conteúdo do e-book que podem surgir durante a sua jornada e interaja com as outras participantes. #TodasJuntas</p>
+          </div>
+        </div>
+        <div class="interacao-container">
+          <p class="star">⭐</p>
+          <div class="interacao-items">
+            <p class="title-interacao">Inspire outras mulheres</p>
+              <span class="description-interacao">Você pode postar seus resultados, pratos e como está se sentindo. Faça parte da nossa comunidade com mais de 8 mil pessoas com o mesmo objetivo que você: Alcançar o peso ideal e o corpo dos nossos sonhos.</p>
+          </div>
+        </div>
+      </div>
+      <div class="part2">
+          <img src="/images/outras/meninas.webp" alt="">
+      </div>
+      </section>
+      </section>
+      <div class="footer-integracao">
+        <h1 class="title-integracao-footer">Agora é com você! Clique no botão abaixo e comece a partir de agora transformar o seu corpo e autoestima.</h1>
+        <a href="" class="button">
+          <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
+          <p class="bottom-button">
+            satisfação garantida ou seu dinheiro de voltar
+          </p>
+        </a>
+      </div>
+      <section class="perguntas">
+        <h1 class="perguntas-title">Perguntas Frequentes</h1>
+      </section>
+      <section class="faq-container">
+
+        <section class="faq">
+          <details>
+            <summary>COMO IREI RECEBER O PRODUTO?</summary>
+            <p class="reposta">O acesso ao produto é imediato após a confirmação do seu pagamento. É enviado o seu acesso ao seu e-mail ou WhatsApp, você faz o download do conteúdo no seu celular e pronto! Já pode começar sua transformação corporal.</p>
+          </details>
+          <details>
+            <summary>QUAIS AS FORMAS DE PAGAMENTO?</summary>
+            <p class="reposta">Pagamentos feitos no Pix você recebe seu acesso em algumas horas ou em poucos minutos em seu e-mail. Pagamentos feitos no Cartão de Crédito você recebe o seu acesso no mesmo instante/imediato em seu e-mail. Pagamentos feitos por boleto você recebe o seu acesso em até 3 dias úteis em seu e-mail e pagamentos pelo Paypal você recebe o seu acesso em poucos minutos em seu e-mail.</p>
+          </details>
+          <details>
+            <summary>TENHO QUE PAGAR TODO MÊS?</summary>
+            <p class="reposta">De jeito nenhum! Você vai pagar somente esse valor único informado neste site, sem nenhum tipo de mensalidades ou taxas extras.
+            </p>
+          </details>
+          <details>
+            <summary>QUANTO TEMPO DE ACESSO AO DESAFIO 19 DIAS EU TEREI?</summary>
+            <p class="reposta">Após a compra ser confirmada você tem acesso vitalício ao conteúdo e Grupo VIP.</p>
+          </details>
+          <details>
+            <summary>OS ALIMENTOS SÃO CAROS?</summary>
+            <p class="reposta">Desenvolvemos um cardápio e receita simples e acessíveis, ou seja, são alimentos fáceis e baratos de se encontrar em qualquer lugar.</p>
+          </details>
+          <details>
+            <summary>MEU DIA É CORRIDO, TENHO POUCO TEMPO, VOU CONSEGUIR RESULTADOS?</summary>
+            <p class="reposta">Sim, com o pouco tempo do seu dia você já consegue colocar tudo em prática. Centenas de alunas trabalham o dia todo e conseguem resultados incríveis mesmo com pouco tempo.</p>
+          </details>
+          <details>
+            <summary>EXISTE ALGUMA COISA QUE CHEGA PELO CORREIO?</summary>
+            <p class="reposta">Não, esse é um produto 100% digital. Você recebe o produto imediatamente após finalizar o pagamento em seu e-mail.</p>
+          </details>
+          <details>
+            <summary>COMO FAÇO PARA COMPRAR ESSE PRODUTO?</summary>
+            <p class="reposta">Para realizar sua compra basta clicar em qualquer botão verde desse site e ir direto para a página de pagamento. Lá, é só preencher os dados e escolher a forma de pagamento que você desejar.</p>
+          </details>
+        </section>
+      </section>
+      <footer>
+        <p class="footer-container">
+          AVISO LEGAL: Todas as sugestões e conceitos apresentados aqui têm como objetivo apenas informar e educar. Este site foi disponibilizado com esse objetivo e não tem intenção nenhuma de servir como orientação médica, prescrição ou substituir diagnósticos de profissionais. Nenhuma informação desta página ou deste produto substitui uma consulta com seu médico, nutricionista ou um personal. É importante o acompanhamento profissional para qualquer mudança na alimentação ou estilo de vida alimentar. É só ele quem poderá avaliar de perto a sua situação atual e decidir se você está apto(a) ou não à essas alterações. Tenha em mente que os resultados aqui apresentados não garantem que você terá os mesmo resultados, isso depende e varia do organismo de cada pessoa e da determinação em seguir as sugestões propostas e ter resultados.
+        </p>
+        <h2 class="copyright">Copyright © 2021 - Todos os direitos reservados.
+        </h2>
+      </footer>
   </body>
 </html>
