feature: lp complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>FINALMENTE REVELADO:</h1>
-      <h2 class="h2-border">METODO 100% NATURAL PARA ELIMINAR</h2>
+      <h2 class="h2-border">MÉTODO 100% NATURAL PARA ELIMINAR</h2>
       <h2 class="h2-border">GORDURA LOCALIZADA E EMAGRECER ATÉ 10KG</h2>
       <h2>EM APENAS 19 DIAS!</h2>
       <div class="vsl">
@@ -24,7 +24,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <p>
+      <p class="italic">
         ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
         EM ATÉ 6X.
       </p>
@@ -36,12 +36,12 @@
       </a>
     </header>
     <main>
-      <h1 class="title-main">Conheça A Sua Jornada Dos Próximos 19 Dias!</h1>
-      <p>Os principais processos para a efetividade do seu emagrecimento!</p>
+      <h1 class="title-main italic">Conheça A Sua Jornada Dos Próximos 19 Dias!</h1>
+      <p class="italic">Os principais processos para a efetividade do seu emagrecimento!</p>
       <div class="card">
-        <div class="number-card">1</div>
+        <div class="number-card number1">1</div>
         <div class="card-part-2">
-          <h1 class="title-card">DESINTOXICAÇÃO</h1>
+          <h1 class="title-card italic">DESINTOXICAÇÃO</h1>
           <p>
             Limpar, desintoxicar e desinchar o seu corpo possibilitando perder
             até 3 kg logo nos primeiros 3 dias.
@@ -51,7 +51,7 @@
       <div class="card">
         <div class="number-card">2</div>
         <div class="card-part-2">
-          <h1 class="title-card">TRANSFORMAÇÃO</h1>
+          <h1 class="title-card italic">TRANSFORMAÇÃO</h1>
           <p>
             Reestruturar a sua alimentação aos princípios Low Carb, para reduzir
             a ingestão de carboidratos e consumir mais proteínas e gorduras
@@ -60,9 +60,9 @@
         </div>
       </div>
       <div class="card">
-        <div class="number-card">1</div>
+        <div class="number-card">3</div>
         <div class="card-part-2">
-          <h1 class="title-card">ATIVAÇÃO DO SEU CORPO</h1>
+          <h1 class="title-card italic">ATIVAÇÃO DO SEU CORPO</h1>
           <p>
             Além de potencializar o seu emagrecimento, você percebe melhoras
             significativas na sua energia e disposição.
@@ -70,9 +70,9 @@
         </div>
       </div>
       <div class="card">
-        <div class="number-card">1</div>
+        <div class="number-card">4</div>
         <div class="card-part-2">
-          <h1 class="title-card">ACELERAÇÃO</h1>
+          <h1 class="title-card italic">ACELERAÇÃO</h1>
           <p>
             Tire o seu organismo da estagnação e gere novos estímulos para
             potencializar a mudança corporal e redução das suas medidas.
@@ -80,9 +80,9 @@
         </div>
       </div>
       <div class="card">
-        <div class="number-card">1</div>
+        <div class="number-card">5</div>
         <div class="card-part-2">
-          <h1 class="title-card">FINALIZAÇÃO</h1>
+          <h1 class="title-card italic">FINALIZAÇÃO</h1>
           <p>
             Parabéns! Você concluiu seu desafio. Aqui você provavelmente já vai
             ter eliminado o peso que desejava, estará com a sua barriga sequinha
@@ -90,7 +90,7 @@
           </p>
         </div>
       </div>
-      <p style="margin-top: 3rem; font-weight: 500">
+      <p style="margin-top: 3rem; font-weight: 500" class="italic">
         ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
         EM ATÉ 6X.
       </p>
@@ -100,16 +100,16 @@
           satisfação garantida ou seu dinheiro de voltar
         </p>
       </a>
-      <img style="margin-top: -3rem" src="/images/seguro.png" alt="" />
+      <img style="margin-top: -3rem" src="/images/seguro.webp" alt="" />
     </main>
     <section class="main-2">
-      <span
+      <span class="italic"
         >Já Imaginou Emagrecer Com Um Método Capaz De Transformar O Seu Corpo De
         Forma Saudável Em Apenas 19 Dias?</span
       >
     </section>
     <section class="provas">
-      <h3 class="title-provas">
+      <h3 class="title-provas italic">
         Centenas De Pessoas Sendo Transformadas Com O Desafio 19 Dias E Você
         Pode Ser A Próxima! Veja Alguns Resultados (100% Reais):
       </h3>
@@ -126,7 +126,7 @@
         <img src="/images/provas/5.jpg" alt="" />
         <img src="/images/provas/6.jpg" alt="" />
       </div>
-      <h1 class="title-provas">
+      <h1 class="title-provas italic">
         O Corpo Dos Seus Sonhos Sem Pílulas Ou Medicamentos! Esse É O Poder Do
         Desafio 19 Dias!
       </h1>
@@ -147,26 +147,26 @@
         <img src="/images/slider/7.jpg" alt="" />
         <img src="/images/slider/8.jpg" alt="" />
       </div>
-      <p class="acesso" style="margin-top: 0.5rem">
+      <p class="acesso italic" style="margin-top: 3rem; font-weight: 500">
         ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
         EM ATÉ 6X.
       </p>
       <div class="button-container">
         <a href="" class="button">
-          <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
+          <p class="top-button">SIM, EU QUERO SECAR A MINHA BARRIGA!</p>
           <p class="bottom-button">
             satisfação garantida ou seu dinheiro de voltar
           </p>
         </a>
       </div>
-      <img style="margin-top: -3rem" src="/images/seguro.png" alt="" />
+      <img style="margin-top: -3rem" src="/images/seguro.webp" alt="" />
     </section>
     <section class="video-provas">
-      <h1 class="title-video-provas">QUEM COMPROU, NÃO SE ARREPENDEU!</h1>
+      <h1 class="title-video-provas italic">QUEM COMPROU, NÃO SE ARREPENDEU!</h1>
       <div class="videos-content">
         <iframe
-          width="352.8"
-          height="198.45"
+          width="317.52"
+          height="178.6"
           src="https://www.youtube.com/embed/io17VfViLiI"
           title="YouTube video player"
           frameborder="0"
@@ -174,8 +174,8 @@
           allowfullscreen
         ></iframe>
         <iframe
-          width="352.8"
-          height="198.45"
+        width="317.52"
+        height="178.6"
           src="https://www.youtube.com/embed/QtliTggLrss"
           title="YouTube video player"
           frameborder="0"
@@ -183,8 +183,8 @@
           allowfullscreen
         ></iframe>
         <iframe
-          width="352.8"
-          height="198.45"
+        width="317.52"
+        height="178.6"
           src="https://www.youtube.com/embed/5WnMj3xxodA"
           title="YouTube video player"
           frameborder="0"
@@ -198,7 +198,7 @@
         <img src="/images/outras/celular.webp" alt="" />
       </div>
       <div class="celular-description">
-        <h1>
+        <h1 class="italic">
           VOCÊ VAI TER ACESSO AO MÉTODO DE EMAGRECIMENTO NA PALMA DA SUA MÃO
         </h1>
         <h2>
@@ -208,7 +208,7 @@
       </div>
     </section>
     <section class="bonus">
-      <h1 class="bonus-title">
+      <h1 class="bonus-title italic">
         ATENÇÃO! COMPRE HOJE E GANHE ESSES BÔNUS EXCLUSIVOS:
       </h1>
       <div class="bonus-container">
@@ -248,7 +248,7 @@
       </div>
     </section>
     <section class="maryana">
-      <h1 class="maryana-title">
+      <h1 class="maryana-title italic">
         Veja O Resultado Incrível Da Maryana:
       </h1>
       <div class="vsl">
@@ -259,14 +259,14 @@
         EM ATÉ 6X.
       </p>
       <a href="" class="button">
-        <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
+        <p class="top-button">SIM, EU QUERO EMAGRECER COM SAÚDE!</p>
         <p class="bottom-button">
           satisfação garantida ou seu dinheiro de voltar
         </p>
       </a>
     </section>
     <section class="porque">
-      <h1 class="porque-title">Por Que O Desafio 19 Dias É Um Método Super Funcional?
+      <h1 class="porque-title italic">Por Que O Desafio 19 Dias É Um Método Super Funcional?
       </h1>
       <div class="porque-items">
         <h2>✅ Eficiência energética</h2>
@@ -282,11 +282,11 @@
       </div>
       <img src="/images/outras/antes.webp" alt="">
       <div class="list">
-        <img src="/images/outras/list.jpg" alt="">
+        <img src="/images/outras/list.png" alt="">
       </div>
     </section>
     <section class="preco">
-      <h1 class="preco-title">Quanto Vale TUDO ISSO?
+      <h1 class="preco-title italic">Quanto Vale TUDO ISSO?
       </h1>
       <div class="preco-container">
         
@@ -322,29 +322,29 @@
     </section>
     <section class="bump">
       <section class="bump-container">
-        <h1 class="title-bump">LIBERAMOS UMA PROMOÇÃO IMPERDÍVEL SOMENTE HOJE. NÃO PERCA ESSA OPORTUNIDADE E ADQUIRA AGORA MESMO!</h1>
-        <h2 class="subtitle-bump">ÚLTIMAS VAGAS COM DESCONTO
+        <h1 class="title-bump italic">LIBERAMOS UMA PROMOÇÃO IMPERDÍVEL SOMENTE HOJE. NÃO PERCA ESSA OPORTUNIDADE E ADQUIRA AGORA MESMO!</h1>
+        <h2 class="subtitle-bump italic">ÚLTIMAS VAGAS COM DESCONTO
         </h2>
-       <h3 class="oferta">Oferta Imperdível! Apenas
+       <h3 class="oferta italic">Oferta Imperdível! Apenas
       </h3>
-      <p class="price">R$ 25,00</p>
-      <p class="slice-price">Até 2X de R$ 12,97</p>
+      <p class="price italic">R$ 25,00</p>
+      <p class="slice-price italic">Até 2X de R$ 12,97</p>
       <a href="" class="bump-button">SIM, EU QUERO COMEÇAR AGORA!</a>
-      <p class="bump-pagamento">PAGAMENTO ÚNICO, SEM MENSALIDADES, 
+      <p class="bump-pagamento italic">PAGAMENTO ÚNICO, SEM MENSALIDADES, 
         ACESSO VITALÍCIO AO CONTEÚDO.</p>
         <div class="bump-image">
           <img src="/images/outras/bandeiras.webp" alt="">
         </div>
       </section>
     </section>
-    <section class="headline-red">
+    <section class="headline-red italic">
       Oferta Disponível Somente Por Mais Alguns Minutos! Não Perca Mais Tempo E Comece HOJE A Sua Mudança
     </section>
     <section class="garantia">
       <img src="/images/outras/garantia.webp" alt="">
-      <h1>7 Dias De Garantia Incondicional</h1>
-      <p>Simples! Compre agora e tenha direito de arrependimento de até 7 dias.</p>
-    <p>Se você não gostar ou não se adaptar ao nosso método, basta enviar um e-mail para desafio19dias.contato@gmail.com dentro do período de garantia e cancelamos sua compra, reembolsando 100% do valor pago sem burocracias. Esse é o nosso compromisso com você!</p>
+      <h1 class="italic">7 Dias De Garantia Incondicional</h1>
+      <p class="italic">Simples! Compre agora e tenha direito de arrependimento de até 7 dias.</p>
+    <p class="italic">Se você não gostar ou não se adaptar ao nosso método, basta enviar um e-mail para desafio19dias.contato@gmail.com dentro do período de garantia e cancelamos sua compra, reembolsando 100% do valor pago sem burocracias. Esse é o nosso compromisso com você!</p>
     <div class="slider">
       <img src="/images/slider2/1.webp" alt="">
       <img src="/images/slider2/2.webp" alt="">
@@ -357,7 +357,7 @@
   <section class="interacao-content">
     <section class="interacao">
       <div class="part1">
-        <h1 class="interacao-title">Interação E Motivação No Grupo VIP</h1>
+        <h1 class="interacao-title italic">Interação E Motivação No Grupo VIP</h1>
         <div class="interacao-container">
           <p class="star">⭐</p>
           <div class="interacao-items">
@@ -379,7 +379,7 @@
       </section>
       </section>
       <div class="footer-integracao">
-        <h1 class="title-integracao-footer">Agora é com você! Clique no botão abaixo e comece a partir de agora transformar o seu corpo e autoestima.</h1>
+        <h1 class="title-integracao-footer italic">Agora é com você! Clique no botão abaixo e comece a partir de agora transformar o seu corpo e autoestima.</h1>
         <a href="" class="button">
           <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
           <p class="bottom-button">
@@ -432,7 +432,7 @@
         <p class="footer-container">
           AVISO LEGAL: Todas as sugestões e conceitos apresentados aqui têm como objetivo apenas informar e educar. Este site foi disponibilizado com esse objetivo e não tem intenção nenhuma de servir como orientação médica, prescrição ou substituir diagnósticos de profissionais. Nenhuma informação desta página ou deste produto substitui uma consulta com seu médico, nutricionista ou um personal. É importante o acompanhamento profissional para qualquer mudança na alimentação ou estilo de vida alimentar. É só ele quem poderá avaliar de perto a sua situação atual e decidir se você está apto(a) ou não à essas alterações. Tenha em mente que os resultados aqui apresentados não garantem que você terá os mesmo resultados, isso depende e varia do organismo de cada pessoa e da determinação em seguir as sugestões propostas e ter resultados.
         </p>
-        <h2 class="copyright">Copyright © 2021 - Todos os direitos reservados.
+        <h2 class="copyright">Copyright © 2023 - Todos os direitos reservados.
         </h2>
       </footer>
   </body>
