feature: link hotmart pay add

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
         EM ATÉ 6X.
       </p>
-      <a href="" class="button">
+      <a href="https://pay.hotmart.com/J78792976K?checkoutMode=10" class="button">
         <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
         <p class="bottom-button">
           satisfação garantida ou seu dinheiro de voltar
@@ -94,7 +94,7 @@
         ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
         EM ATÉ 6X.
       </p>
-      <a href="" class="button">
+      <a href="https://pay.hotmart.com/J78792976K?checkoutMode=10" class="button">
         <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
         <p class="bottom-button">
           satisfação garantida ou seu dinheiro de voltar
@@ -152,7 +152,7 @@
         EM ATÉ 6X.
       </p>
       <div class="button-container">
-        <a href="" class="button">
+        <a href="https://pay.hotmart.com/J78792976K?checkoutMode=10" class="button">
           <p class="top-button">SIM, EU QUERO SECAR A MINHA BARRIGA!</p>
           <p class="bottom-button">
             satisfação garantida ou seu dinheiro de voltar
@@ -258,7 +258,7 @@
         ACESSO VITALÍCIO POR APENAS R$25,00! PAGUE À VISTA OU PARCELE NO CARTÃO
         EM ATÉ 6X.
       </p>
-      <a href="" class="button">
+      <a href="https://pay.hotmart.com/J78792976K?checkoutMode=10" class="button">
         <p class="top-button">SIM, EU QUERO EMAGRECER COM SAÚDE!</p>
         <p class="bottom-button">
           satisfação garantida ou seu dinheiro de voltar
@@ -329,7 +329,7 @@
       </h3>
       <p class="price italic">R$ 25,00</p>
       <p class="slice-price italic">Até 2X de R$ 12,97</p>
-      <a href="" class="bump-button">SIM, EU QUERO COMEÇAR AGORA!</a>
+      <a href="https://pay.hotmart.com/J78792976K?checkoutMode=10" class="bump-button">SIM, EU QUERO COMEÇAR AGORA!</a>
       <p class="bump-pagamento italic">PAGAMENTO ÚNICO, SEM MENSALIDADES, 
         ACESSO VITALÍCIO AO CONTEÚDO.</p>
         <div class="bump-image">
@@ -380,7 +380,7 @@
       </section>
       <div class="footer-integracao">
         <h1 class="title-integracao-footer italic">Agora é com você! Clique no botão abaixo e comece a partir de agora transformar o seu corpo e autoestima.</h1>
-        <a href="" class="button">
+        <a href="https://pay.hotmart.com/J78792976K?checkoutMode=10" class="button">
           <p class="top-button">SIM, EU QUERO EMAGRECER A PARTIR DE HOJE!</p>
           <p class="bottom-button">
             satisfação garantida ou seu dinheiro de voltar
