fix: css and images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Desafio 19 Dias - MÉTODO 100% NATURAL PARA ELIMINAR GORDURA</title>
   </head>
   <body>
@@ -114,17 +114,17 @@
         Pode Ser A Próxima! Veja Alguns Resultados (100% Reais):
       </h3>
       <div class="img">
-        <img src="/images/provas/0.jpg" alt="" />
+        <img src="images/provas/0.jpg" alt="" />
       </div>
       <div class="grid">
-        <img src="/images/provas/1.jpg" alt="" />
-        <img src="/images/provas/2.jpg" alt="" />
-        <img src="/images/provas/3.jpg" alt="" />
+        <img src="images/provas/1.jpg" alt="" />
+        <img src="images/provas/2.jpg" alt="" />
+        <img src="images/provas/3.jpg" alt="" />
       </div>
       <div class="grid">
-        <img src="/images/provas/4.jpg" alt="" />
-        <img src="/images/provas/5.jpg" alt="" />
-        <img src="/images/provas/6.jpg" alt="" />
+        <img src="images/provas/4.jpg" alt="" />
+        <img src="images/provas/5.jpg" alt="" />
+        <img src="images/provas/6.jpg" alt="" />
       </div>
       <h1 class="title-provas italic">
         O Corpo Dos Seus Sonhos Sem Pílulas Ou Medicamentos! Esse É O Poder Do
@@ -137,15 +137,15 @@
         maioria você já tem em casa!
       </h2>
       <div class="slider">
-        <img src="/images/slider/0.jpg" alt="" />
-        <img src="/images/slider/1.jpg" alt="" />
-        <img src="/images/slider/2.jpg" alt="" />
-        <img src="/images/slider/3.jpg" alt="" />
-        <img src="/images/slider/4.jpg" alt="" />
-        <img src="/images/slider/5.jpg" alt="" />
-        <img src="/images/slider/6.jpg" alt="" />
-        <img src="/images/slider/7.jpg" alt="" />
-        <img src="/images/slider/8.jpg" alt="" />
+        <img src="images/slider/0.jpg" alt="" />
+        <img src="images/slider/1.jpg" alt="" />
+        <img src="images/slider/2.jpg" alt="" />
+        <img src="images/slider/3.jpg" alt="" />
+        <img src="images/slider/4.jpg" alt="" />
+        <img src="images/slider/5.jpg" alt="" />
+        <img src="images/slider/6.jpg" alt="" />
+        <img src="images/slider/7.jpg" alt="" />
+        <img src="images/slider/8.jpg" alt="" />
       </div>
       <p class="acesso italic" style="margin-top: 3rem; font-weight: 500">
         ACESSO VITALÍCIO POR APENAS R$47,00! PAGUE À VISTA OU PARCELE NO CARTÃO
@@ -195,7 +195,7 @@
     </section>
     <section class="celular">
       <div class="img-celular">
-        <img src="/images/outras/celular.webp" alt="" />
+        <img src="images/outras/celular.webp" alt="" />
       </div>
       <div class="celular-description">
         <h1 class="italic">
@@ -214,7 +214,7 @@
       <div class="bonus-container">
         <div class="bonus-part-1">
           <div class="bonus-item">
-            <img src="/images/bonus/0.webp" alt="" />
+            <img src="images/bonus/0.webp" alt="" />
             <div class="bonus-item-content">
               <h1 class="bonus-item-title">+ De 300 Receitas Low Carb</h2>
               <h2 class="bonus-item-description">
@@ -224,7 +224,7 @@
             </div>
           </div>
           <div class="bonus-item">
-            <img src="/images/bonus/1.webp" alt="" />
+            <img src="images/bonus/1.webp" alt="" />
             <div class="bonus-item-content">
               <h1 class="bonus-item-title">+ De 100 Receitas Detox</h2>
               <h2 class="bonus-item-description">
@@ -233,7 +233,7 @@
             </div>
           </div>
           <div class="bonus-item">
-            <img src="/images/bonus/2.webp" alt="" />
+            <img src="images/bonus/2.webp" alt="" />
             <div class="bonus-item-content">
               <h1 class="bonus-item-title">Suporte E Motivação No Grupo Vip</h2>
               <h2 class="bonus-item-description">
@@ -243,7 +243,7 @@
           </div>
         </div>
         <div class="bonus-part-2">
-          <img src="/images/bonus/mulher.webp" alt="">
+          <img src="images/bonus/mulher.webp" alt="">
         </div>
       </div>
     </section>
@@ -280,9 +280,9 @@
         <h2>✅ Motivação Diária</h2>
         <h3>Incentivo e suporte no nosso Grupo Vip para que você se mantenha motivada no seu objetivo e consiga finalmente mudar de vida.</h3>
       </div>
-      <img src="/images/outras/antes.webp" alt="">
+      <img src="images/outras/antes.webp" alt="">
       <div class="list">
-        <img src="/images/outras/list.png" alt="">
+        <img src="images/outras/list.png" alt="">
       </div>
     </section>
     <section class="preco">
@@ -333,7 +333,7 @@
       <p class="bump-pagamento italic">PAGAMENTO ÚNICO, SEM MENSALIDADES, 
         ACESSO VITALÍCIO AO CONTEÚDO.</p>
         <div class="bump-image">
-          <img src="/images/outras/bandeiras.webp" alt="">
+          <img src="images/outras/bandeiras.webp" alt="">
         </div>
       </section>
     </section>
@@ -341,17 +341,17 @@
       Oferta Disponível Somente Por Mais Alguns Minutos! Não Perca Mais Tempo E Comece HOJE A Sua Mudança
     </section>
     <section class="garantia">
-      <img src="/images/outras/garantia.webp" alt="">
+      <img src="images/outras/garantia.webp" alt="">
       <h1 class="italic">7 Dias De Garantia Incondicional</h1>
       <p class="italic">Simples! Compre agora e tenha direito de arrependimento de até 7 dias.</p>
     <p class="italic">Se você não gostar ou não se adaptar ao nosso método, basta enviar um e-mail para desafio19dias.contato@gmail.com dentro do período de garantia e cancelamos sua compra, reembolsando 100% do valor pago sem burocracias. Esse é o nosso compromisso com você!</p>
     <div class="slider">
-      <img src="/images/slider2/1.webp" alt="">
-      <img src="/images/slider2/2.webp" alt="">
-      <img src="/images/slider2/3.webp" alt="">
-      <img src="/images/slider2/4.webp" alt="">
-      <img src="/images/slider2/5.webp" alt="">
-      <img src="/images/slider2/6.webp" alt="">
+      <img src="images/slider2/1.webp" alt="">
+      <img src="images/slider2/2.webp" alt="">
+      <img src="images/slider2/3.webp" alt="">
+      <img src="images/slider2/4.webp" alt="">
+      <img src="images/slider2/5.webp" alt="">
+      <img src="images/slider2/6.webp" alt="">
     </div>
   </section>
   <section class="interacao-content">
@@ -374,7 +374,7 @@
         </div>
       </div>
       <div class="part2">
-          <img src="/images/outras/meninas.webp" alt="">
+          <img src="images/outras/meninas.webp" alt="">
       </div>
       </section>
       </section>
